[package]
description = "🦀 Rust WebAssembly VM: Execute Rust Virtual Machine programs in the Web Browser"
edition = "2021"
license = "MIT"
name = "rust-wasm-vm"
repository = "https://github.com/xonoxitron/rust-wasm-vm"
version = "0.1.0"

[dependencies]
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib"]
